# gervLib_unique_ptr

./: .gitignore  CMakeLists.txt  README.md  build.bash  build_test_SRAND.bash  calculateLID.bash  expt.bash
data/: Dataset1.csv  cities_Q1.csv  cities_Q2.csv  cities_Q3.csv  cities_Q4.csv  cities_norm.csv  cities_norm_test.csv  cities_norm_train.csv
include/configure/: Configure.h
include/dataset/: BasicArrayObject.h  Dataset.h  DatasetUtils.h  DatasetWrapper.h
include/distance/: DistanceFunction.h  EditDistance.h  EuclideanDistance.h
include/factory/: DistanceFactory.h  IndexFactory.h  PivotFactory.h
include/hilbert/: HilbertCurve.h
include/histogram/: EquiDepth.h
include/indexes/: Index.h  Indexes.h  KdTree.h  LAESA.h  LC.h  MVPTree.h  OmniKdTree.h  PMTree.h  SPBTree.h  SequentialScan.h  VPTree.h
include/kmedoids/: Cluster.h  Kmedoids.h
include/matrix/: Matrix.h
include/memory/: Page.h  PageManager.h
include/nAryTree/: NAryTree.h
include/pivots/: BPPPivots.h  ConvexPivots.h  FFTPivots.h  HFIPivots.h  ISPivots.h  KmedoidsPivots.h  MaxSeparatedPivots.h  MaxVariancePivots.h  PCAPivots.h  Pivot.h  Pivots.h  RandomPivots.h  SSSPivots.h  SelectionPivots.h  WDRPivots.h
include/query/: Query.h
include/serialize/: Serialize.h
include/utils/: Utils.h
libs/bptree/: btree.h  btree.hpp  btree_multimap.h  btree_multimap.hpp
libs/uuid/: libuuidpp.hpp
scripts/: LidSplit.py  Plots.ipynb  requirements.txt  split_file.py
scripts/.ipynb_checkpoints/: HilbertTest-checkpoint.ipynb  Plots-checkpoint.ipynb  Utils-checkpoint.ipynb
scripts/output_files/LC_CITIES_BPP_0/: build_0.txt
scripts/output_files/LC_CITIES_CONVEX_0/: build_0.txt
scripts/output_files/LC_CITIES_FFT_0/: build_0.txt
scripts/output_files/LC_CITIES_HFI_0/: build_0.txt
scripts/output_files/LC_CITIES_IS_0/: build_0.txt
scripts/output_files/LC_CITIES_KMEDOIDS_0/: build_0.txt
scripts/output_files/LC_CITIES_MAXSEPARATED_0/: build_0.txt
scripts/output_files/LC_CITIES_MAXVARIANCE_0/: build_0.txt
scripts/output_files/LC_CITIES_PCA_0/: build_0.txt
scripts/output_files/LC_CITIES_RANDOM_0/: build_0.txt
scripts/output_files/LC_CITIES_SELECTION_0/: build_0.txt
scripts/output_files/LC_CITIES_SSS_0/: build_0.txt
scripts/output_files/LC_CITIES_WDR_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_BPP_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_CONVEX_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_FFT_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_HFI_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_IS_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_KMEDOIDS_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_MAXSEPARATED_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_MAXVARIANCE_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_PCA_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_RANDOM_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_SELECTION_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_SSS_0/: build_0.txt
scripts/output_files/MVPTREE_CITIES_WDR_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_BPP_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_CONVEX_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_FFT_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_HFI_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_IS_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_KMEDOIDS_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_MAXSEPARATED_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_MAXVARIANCE_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_PCA_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_RANDOM_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_SELECTION_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_SSS_0/: build_0.txt
scripts/output_files/OMNIKDTREE_CITIES_WDR_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_BPP_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_CONVEX_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_FFT_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_HFI_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_IS_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_KMEDOIDS_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_MAXSEPARATED_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_MAXVARIANCE_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_PCA_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_RANDOM_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_SELECTION_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_SSS_0/: build_0.txt
scripts/output_files/PMTREE_CITIES_WDR_0/: build_0.txt
scripts/output_files/SPBTREE_CITIES_BPP_0/: build_0.txt  bulk_load_disc.txt  bulk_load_pivot_mapping.txt  bulk_load_sfc.txt  equi_depth.txt
scripts/output_files/SPBTREE_CITIES_CONVEX_0/: build_0.txt  bulk_load_disc.txt  bulk_load_pivot_mapping.txt  bulk_load_sfc.txt  equi_depth.txt
scripts/output_files/SPBTREE_CITIES_FFT_0/: build_0.txt  bulk_load_disc.txt  bulk_load_pivot_mapping.txt  bulk_load_sfc.txt  equi_depth.txt
scripts/output_files/SPBTREE_CITIES_HFI_0/: build_0.txt  bulk_load_disc.txt  bulk_load_pivot_mapping.txt  bulk_load_sfc.txt  equi_depth.txt
scripts/output_files/SPBTREE_CITIES_IS_0/: build_0.txt  bulk_load_disc.txt  bulk_load_pivot_mapping.txt  bulk_load_sfc.txt  equi_depth.txt
scripts/output_files/VPTREE_CITIES_BPP_0/: build_0.txt
src/: main.cpp  main_cp.cpp  main_lid.cpp  main_serialize.cpp  main_test.cpp
tests/: BPPPivotsTest.cpp  BasicArrayObjectTest.cpp  CMakeLists.txt  ConvexPivotsTest.cpp  DatasetTest.cpp  DistanceTest.cpp  FFTPivotsTest.cpp  HFIPivotsTest.cpp  ISPivotsTest.cpp  KdTreeTest.cpp  KmedoidsPivotsTest.cpp  LAESATest.cpp  LCTest.cpp  MVPTreeTest.cpp  MaxSeparatedPivotsTest.cpp  MaxVariancePivotsTest.cpp  OmniKdTreeTest.cpp  PCAPivotsTest.cpp  PMTreeTest.cpp  PageManagerTest.cpp  PivotTest.cpp  QueryUtils.cpp  RandomPivotsTest.cpp  SPBTreeTest.cpp  SSSPivotsTest.cpp  SelectionPivotsTest.cpp  SequentialScanTest.cpp  VPTreeTest.cpp  WDRPivotsTest.cpp
(+547 files in other folders)
