include_directories(../src)
include_directories(../include)
include_directories(../libs)
include_directories(../libs/uuid)
include_directories(../libs/eigen)
include_directories(../include/utils)
include_directories(../include/configure)
include_directories(../include/dataset)
include_directories(../include/serialize)
include_directories(../include/distance)
include_directories(../include/factory)
include_directories(../include/pivots)
include_directories(../include/kmedoids)

add_executable(BasicArrayObjectTest BasicArrayObjectTest.cpp)
add_executable(DatasetTest DatasetTest.cpp)
add_executable(DistanceTest DistanceTest.cpp)
add_executable(PivotTest PivotTest.cpp)
add_executable(RandomPivotsTest RandomPivotsTest.cpp)
add_executable(FFTPivotsTest FFTPivotsTest.cpp)
add_executable(ConvexPivotsTest ConvexPivotsTest.cpp)
add_executable(MaxSeparatedPivotsTest MaxSeparatedPivotsTest.cpp)
add_executable(MaxVariancePivotsTest MaxVariancePivotsTest.cpp)
add_executable(SelectionPivotsTest SelectionPivotsTest.cpp)
add_executable(PCAPivotsTest PCAPivotsTest.cpp)
add_executable(SSSPivotsTest SSSPivotsTest.cpp)
add_executable(HFIPivotsTest HFIPivotsTest.cpp)
add_executable(ISPivotsTest ISPivotsTest.cpp)
add_executable(WDRPivotsTest WDRPivotsTest.cpp)
add_executable(BPPPivotsTest BPPPivotsTest.cpp)
add_executable(KmedoidsPivotsTest KmedoidsPivotsTest.cpp)

if (ENABLE_SRAND)
    target_compile_definitions(BasicArrayObjectTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(DatasetTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(DistanceTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(PivotTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(RandomPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(FFTPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(ConvexPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(MaxSeparatedPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(MaxVariancePivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(SelectionPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(PCAPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(SSSPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(HFIPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(ISPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(WDRPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(BPPPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(KmedoidsPivotsTest PRIVATE ENABLE_SRAND)
endif()

add_test(NAME BasicArrayObjectTest COMMAND BasicArrayObjectTest)
add_test(NAME DatasetTest COMMAND DatasetTest)
add_test(NAME DistanceTest COMMAND DistanceTest)
add_test(NAME PivotTest COMMAND PivotTest)
add_test(NAME RandomPivotsTest COMMAND RandomPivotsTest)
add_test(NAME FFTPivotsTest COMMAND FFTPivotsTest)
add_test(NAME ConvexPivotsTest COMMAND ConvexPivotsTest)
add_test(NAME MaxSeparatedPivotsTest COMMAND MaxSeparatedPivotsTest)
add_test(NAME MaxVariancePivotsTest COMMAND MaxVariancePivotsTest)
add_test(NAME SelectionPivotsTest COMMAND SelectionPivotsTest)
add_test(NAME PCAPivotsTest COMMAND PCAPivotsTest)
add_test(NAME SSSPivotsTest COMMAND SSSPivotsTest)
add_test(NAME HFIPivotsTest COMMAND HFIPivotsTest)
add_test(NAME ISPivotsTest COMMAND ISPivotsTest)
add_test(NAME WDRPivotsTest COMMAND WDRPivotsTest)
add_test(NAME BPPPivotsTest COMMAND BPPPivotsTest)
add_test(NAME KmedoidsPivotsTest COMMAND KmedoidsPivotsTest)