include_directories(../src)
include_directories(../include)
include_directories(../libs)
include_directories(../libs/uuid)
include_directories(../libs/eigen)
include_directories(../libs/bptree)
include_directories(../include/utils)
include_directories(../include/configure)
include_directories(../include/dataset)
include_directories(../include/serialize)
include_directories(../include/distance)
include_directories(../include/factory)
include_directories(../include/pivots)
include_directories(../include/kmedoids)
include_directories(../include/indexes)
include_directories(../include/memory)
include_directories(../include/query)
include_directories(../include/matrix)
include_directories(../include/nAryTree)
include_directories(../include/hilbert)
include_directories(../include/histogram)

add_executable(BasicArrayObjectTest BasicArrayObjectTest.cpp)
add_executable(DatasetTest DatasetTest.cpp)
add_executable(DistanceTest DistanceTest.cpp)
add_executable(PivotTest PivotTest.cpp)
add_executable(RandomPivotsTest RandomPivotsTest.cpp)
add_executable(FFTPivotsTest FFTPivotsTest.cpp)
add_executable(ConvexPivotsTest ConvexPivotsTest.cpp)
add_executable(MaxSeparatedPivotsTest MaxSeparatedPivotsTest.cpp)
add_executable(MaxVariancePivotsTest MaxVariancePivotsTest.cpp)
add_executable(SelectionPivotsTest SelectionPivotsTest.cpp)
add_executable(PCAPivotsTest PCAPivotsTest.cpp)
add_executable(SSSPivotsTest SSSPivotsTest.cpp)
add_executable(HFIPivotsTest HFIPivotsTest.cpp)
add_executable(ISPivotsTest ISPivotsTest.cpp)
add_executable(WDRPivotsTest WDRPivotsTest.cpp)
add_executable(BPPPivotsTest BPPPivotsTest.cpp)
add_executable(KmedoidsPivotsTest KmedoidsPivotsTest.cpp)
add_executable(PageManagerTest PageManagerTest.cpp)
add_executable(QueryUtils QueryUtils.cpp)
add_executable(SequentialScanTest SequentialScanTest.cpp)
add_executable(LAESATest LAESATest.cpp)
add_executable(VPTreeTest VPTreeTest.cpp)
add_executable(MVPTreeTest MVPTreeTest.cpp)
add_executable(KdTreeTest KdTreeTest.cpp)
add_executable(OmniKdTreeTest OmniKdTreeTest.cpp)
add_executable(PMTreeTest PMTreeTest.cpp)
add_executable(SPBTreeTest SPBTreeTest.cpp)

if (ENABLE_SRAND)
    target_compile_definitions(BasicArrayObjectTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(DatasetTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(DistanceTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(PivotTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(RandomPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(FFTPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(ConvexPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(MaxSeparatedPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(MaxVariancePivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(SelectionPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(PCAPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(SSSPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(HFIPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(ISPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(WDRPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(BPPPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(KmedoidsPivotsTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(PageManagerTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(QueryUtils PRIVATE ENABLE_SRAND)
    target_compile_definitions(SequentialScanTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(LAESATest PRIVATE ENABLE_SRAND)
    target_compile_definitions(VPTreeTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(MVPTreeTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(KdTreeTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(OmniKdTreeTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(PMTreeTest PRIVATE ENABLE_SRAND)
    target_compile_definitions(SPBTreeTest PRIVATE ENABLE_SRAND)
endif()

if (PROCESS_TIME)
    target_compile_definitions(BasicArrayObjectTest PRIVATE PROCESS_TIME)
    target_compile_definitions(DatasetTest PRIVATE PROCESS_TIME)
    target_compile_definitions(DistanceTest PRIVATE PROCESS_TIME)
    target_compile_definitions(PivotTest PRIVATE PROCESS_TIME)
    target_compile_definitions(RandomPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(FFTPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(ConvexPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(MaxSeparatedPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(MaxVariancePivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(SelectionPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(PCAPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(SSSPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(HFIPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(ISPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(WDRPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(BPPPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(KmedoidsPivotsTest PRIVATE PROCESS_TIME)
    target_compile_definitions(PageManagerTest PRIVATE PROCESS_TIME)
    target_compile_definitions(QueryUtils PRIVATE PROCESS_TIME)
    target_compile_definitions(SequentialScanTest PRIVATE PROCESS_TIME)
    target_compile_definitions(LAESATest PRIVATE PROCESS_TIME)
    target_compile_definitions(VPTreeTest PRIVATE PROCESS_TIME)
    target_compile_definitions(MVPTreeTest PRIVATE PROCESS_TIME)
    target_compile_definitions(KdTreeTest PRIVATE PROCESS_TIME)
    target_compile_definitions(OmniKdTreeTest PRIVATE PROCESS_TIME)
    target_compile_definitions(PMTreeTest PRIVATE PROCESS_TIME)
    target_compile_definitions(SPBTreeTest PRIVATE PROCESS_TIME)
endif()

if (WIN32)
    target_link_libraries(BasicArrayObjectTest libuuid.dll)
    target_link_libraries(DatasetTest libuuid.dll)
    target_link_libraries(DistanceTest libuuid.dll)
    target_link_libraries(PivotTest libuuid.dll)
    target_link_libraries(RandomPivotsTest libuuid.dll)
    target_link_libraries(FFTPivotsTest libuuid.dll)
    target_link_libraries(ConvexPivotsTest libuuid.dll)
    target_link_libraries(MaxSeparatedPivotsTest libuuid.dll)
    target_link_libraries(MaxVariancePivotsTest libuuid.dll)
    target_link_libraries(SelectionPivotsTest libuuid.dll)
    target_link_libraries(PCAPivotsTest libuuid.dll)
    target_link_libraries(SSSPivotsTest libuuid.dll)
    target_link_libraries(HFIPivotsTest libuuid.dll)
    target_link_libraries(ISPivotsTest libuuid.dll)
    target_link_libraries(WDRPivotsTest libuuid.dll)
    target_link_libraries(BPPPivotsTest libuuid.dll)
    target_link_libraries(KmedoidsPivotsTest libuuid.dll)
    target_link_libraries(PageManagerTest libuuid.dll)
    target_link_libraries(QueryUtils libuuid.dll)
    target_link_libraries(SequentialScanTest libuuid.dll)
    target_link_libraries(LAESATest libuuid.dll)
    target_link_libraries(VPTreeTest libuuid.dll)
    target_link_libraries(MVPTreeTest libuuid.dll)
    target_link_libraries(KdTreeTest libuuid.dll)
    target_link_libraries(OmniKdTreeTest libuuid.dll)
    target_link_libraries(PMTreeTest libuuid.dll)
    target_link_libraries(SPBTreeTest libuuid.dll)
else ()
    target_link_libraries(BasicArrayObjectTest libuuid.so)
    target_link_libraries(DatasetTest libuuid.so)
    target_link_libraries(DistanceTest libuuid.so)
    target_link_libraries(PivotTest libuuid.so)
    target_link_libraries(RandomPivotsTest libuuid.so)
    target_link_libraries(FFTPivotsTest libuuid.so)
    target_link_libraries(ConvexPivotsTest libuuid.so)
    target_link_libraries(MaxSeparatedPivotsTest libuuid.so)
    target_link_libraries(MaxVariancePivotsTest libuuid.so)
    target_link_libraries(SelectionPivotsTest libuuid.so)
    target_link_libraries(PCAPivotsTest libuuid.so)
    target_link_libraries(SSSPivotsTest libuuid.so)
    target_link_libraries(HFIPivotsTest libuuid.so)
    target_link_libraries(ISPivotsTest libuuid.so)
    target_link_libraries(WDRPivotsTest libuuid.so)
    target_link_libraries(BPPPivotsTest libuuid.so)
    target_link_libraries(KmedoidsPivotsTest libuuid.so)
    target_link_libraries(PageManagerTest libuuid.so)
    target_link_libraries(QueryUtils libuuid.so)
    target_link_libraries(SequentialScanTest libuuid.so)
    target_link_libraries(LAESATest libuuid.so)
    target_link_libraries(VPTreeTest libuuid.so)
    target_link_libraries(MVPTreeTest libuuid.so)
    target_link_libraries(KdTreeTest libuuid.so)
    target_link_libraries(OmniKdTreeTest libuuid.so)
    target_link_libraries(PMTreeTest libuuid.so)
    target_link_libraries(SPBTreeTest libuuid.so)
endif ()

add_test(NAME BasicArrayObjectTest COMMAND BasicArrayObjectTest)
add_test(NAME DatasetTest COMMAND DatasetTest)
add_test(NAME DistanceTest COMMAND DistanceTest)
add_test(NAME PivotTest COMMAND PivotTest)
add_test(NAME RandomPivotsTest COMMAND RandomPivotsTest)
add_test(NAME FFTPivotsTest COMMAND FFTPivotsTest)
add_test(NAME ConvexPivotsTest COMMAND ConvexPivotsTest)
add_test(NAME MaxSeparatedPivotsTest COMMAND MaxSeparatedPivotsTest)
add_test(NAME MaxVariancePivotsTest COMMAND MaxVariancePivotsTest)
add_test(NAME SelectionPivotsTest COMMAND SelectionPivotsTest)
add_test(NAME PCAPivotsTest COMMAND PCAPivotsTest)
add_test(NAME SSSPivotsTest COMMAND SSSPivotsTest)
add_test(NAME HFIPivotsTest COMMAND HFIPivotsTest)
add_test(NAME ISPivotsTest COMMAND ISPivotsTest)
add_test(NAME WDRPivotsTest COMMAND WDRPivotsTest)
add_test(NAME BPPPivotsTest COMMAND BPPPivotsTest)
add_test(NAME KmedoidsPivotsTest COMMAND KmedoidsPivotsTest)
add_test(NAME PageManagerTest COMMAND PageManagerTest)
add_test(NAME QueryUtils COMMAND QueryUtils)
add_test(NAME SequentialScanTest COMMAND SequentialScanTest)
add_test(NAME LAESATest COMMAND LAESATest)
add_test(NAME VPTreeTest COMMAND VPTreeTest)
add_test(NAME MVPTreeTest COMMAND MVPTreeTest)
add_test(NAME KdTreeTest COMMAND KdTreeTest)
add_test(NAME OmniKdTreeTest COMMAND OmniKdTreeTest)
add_test(NAME PMTreeTest COMMAND PMTreeTest)
add_test(NAME SPBTreeTest COMMAND SPBTreeTest)
